k8s/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: pdf-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
